kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-monitor-frontend
  namespace: security-monitor
  labels:
    app: security-monitor-frontend
    component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: security-monitor-frontend
  template:
    metadata:
      labels:
        app: security-monitor-frontend
        component: frontend
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: frontend
        image: 299138067566.dkr.ecr.eu-central-1.amazonaws.com/devops-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
